# Nucleus

./: CMakeLists.txt  README.md
build-msvc/: nucleus.sln
build-msvc/nucleus/: nucleus.vcxproj  nucleus.vcxproj.filters
build-msvc/nucleus-tests/: nucleus-tests.vcxproj  nucleus-tests.vcxproj.filters
cmake/: AddDummyCpp.cmake  add_dummy_cpp.cmake  nucleus_export_shared.h  nucleus_export_static.h
examples/: CMakeLists.txt  example_window.h
examples/customized_allocator/: CMakeLists.txt
examples/customized_pixel_type/: CMakeLists.txt  main.cu
examples/dynamic_texture/: CMakeLists.txt  main.cu
examples/julia_set/: CMakeLists.txt
examples/multi_gpu/: CMakeLists.txt  main.cu
examples/pinned_memory/: CMakeLists.txt  main.cpp
examples/random_access/: CMakeLists.txt  main.cu
include/nucleus/: allocator.h  allocator.hpp  array_1d.h  array_1d.hpp  array_2d.h  array_2d.hpp  array_3d.h  array_3d.hpp  array_proxy.h  buffer.h  buffer.hpp  buffer_view.h  buffer_view.hpp  context.h  context.hpp  dev_ptr.h  dev_ptr.hpp  device.h  device.hpp  device_pointer.h  device_surface.h  device_texture.h  event.h  event.hpp  format.h  format.hpp  fwd.h  fwd.hpp  graph.h  host_types.h  image.h  image_1d.h  image_2d.h  image_3d.h  image_cube.h  launch_utils.cuh  logger.h  logger.hpp  macros.h  macros.hpp  (+12 more)
samples/: CMakeLists.txt
samples/JuliaSet/: CMakeLists.txt  julia_set.cu
samples/customized_allocator/: CMakeLists.txt  main.cpp
samples/customized_pixel_type/: CMakeLists.txt  main.cu
samples/dynamic_texture/: CMakeLists.txt  main.cu
samples/julia_set/: CMakeLists.txt  main.cu
samples/pinned_memory/: CMakeLists.txt  main.cpp
source/: allocator.cpp  context.cpp  device.cpp  event.cpp  graph.cpp  image.cpp  logger.cpp  stream.cpp  surface.cpp  texture.cpp
src/: allocator.cpp  context.cpp  device.cpp  event.cpp  graph.cpp  image.cpp  logger.cpp  stream.cpp  surface.cpp  texture.cpp
tests/: CMakeLists.txt  allocator-test.cpp  allocator_test.cpp  array_proxy_test.cpp  array_test.cpp  buffer-test.cpp  buffer_test.cpp  buffer_view_test.cpp  context-test.cpp  context_test.cpp  dev_ptr_test.cu  device-test.cpp  device_test.cpp  event-test.cpp  event_test.cpp  graph_test.cu  image_test.cpp  logger-test.cpp  logger_test.cpp  main.cpp  scoped_device_test.cpp  shared_handle_test.cpp  stream_test.cu  surface_test.cu  texture_test.cu
